tests/e2e/fail/while_keyword_removed.ep
# COMPILE_ERROR: Expected end of line
fun main(): void {
    while true {
    }
}
